--- a/html/ui-forms.html
+++ b/html/ui-forms.html
@@ -53,29 +53,29 @@
             </a>
             <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up" aria-labelledby="drop3">
               <div class="message-body">
-                <a target="_blank" href="https://www.wrappixel.com/templates/flexy-bootstrap-admin-template/?ref=376"
+                <a target="_blank" href="https://www.wrappixel.com/templates/flexy-bootstrap-admin-template/?ref=376#demos"
                   class="dropdown-item d-flex align-items-center gap-1">
                   <i class="ti ti-external-link fs-5"></i>
                   Bootstrap Preview
                 </a>
-                <a target="_blank" href="https://www.wrappixel.com/templates/flexy-material-angular-admin/?ref=376"
+                <a target="_blank" href="https://www.wrappixel.com/templates/flexy-material-angular-admin/?ref=376#demos"
                   class="dropdown-item d-flex align-items-center gap-1">
                   <i class="ti ti-external-link fs-5"></i>
                   Angular Preview
                 </a>
-                <a target="_blank" href="https://www.wrappixel.com/templates/flexy-vuetify-dashboard/?ref=376"
+                <a target="_blank" href="https://www.wrappixel.com/templates/flexy-vuetify-dashboard/?ref=376#demos"
                   class="dropdown-item d-flex align-items-center gap-1">
                   <i class="ti ti-external-link fs-5"></i>
                   VueJs Preview
                 </a>
                 <a target="_blank"
-                  href="https://www.wrappixel.com/templates/flexy-nextjs-dashboard-material-ui/?ref=376"
+                  href="https://www.wrappixel.com/templates/flexy-nextjs-dashboard-material-ui/?ref=376#demos"
                   class="dropdown-item d-flex align-items-center gap-1">
                   <i class="ti ti-external-link fs-5"></i>
                   NextJs Preview
                 </a>
                 <a target="_blank"
-                  href="https://www.wrappixel.com/templates/materialm-vuetify-nuxt-js-admin-template/?ref=376"
+                  href="https://www.wrappixel.com/templates/materialm-vuetify-nuxt-js-admin-template/?ref=376#demos"
                   class="dropdown-item d-flex align-items-center gap-1">
                   <i class="ti ti-external-link fs-5"></i>
                   NuxtJs Preview
@@ -92,27 +92,27 @@
             </a>
             <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up" aria-labelledby="drop4">
               <div class="message-body">
-                <a target="_blank" href="https://www.wrappixel.com/templates/flexy-bootstrap-admin-template/?ref=376"
+                <a target="_blank" href="https://www.wrappixel.com/templates/flexy-bootstrap-admin-template/?ref=376#package-card"
                   class="dropdown-item d-flex align-items-center gap-1">
                   <i class="ti ti-external-link fs-5"></i>
-                  Bootstrap Preview
+                  Buy Bootstrap Version
                 </a>
-                <a target="_blank" href="https://www.wrappixel.com/templates/flexy-material-angular-admin/?ref=376"
+                <a target="_blank" href="https://www.wrappixel.com/templates/flexy-material-angular-admin/?ref=376#package-card"
                   class="dropdown-item d-flex align-items-center gap-1">
                   <i class="ti ti-external-link fs-5"></i>
-                  VueJs Preview
-                </a>
-                <a target="_blank"
-                  href="https://www.wrappixel.com/templates/flexy-nextjs-dashboard-material-ui/?ref=376"
-                  class="dropdown-item d-flex align-items-center gap-1">
-                  <i class="ti ti-external-link fs-5"></i>
-                  NextJs Preview
+                  Buy VueJs Version
                 </a>
                 <a target="_blank"
-                  href="https://www.wrappixel.com/templates/materialm-vuetify-nuxt-js-admin-template/?ref=376"
+                  href="https://www.wrappixel.com/templates/flexy-nextjs-dashboard-material-ui/?ref=376#package-card"
                   class="dropdown-item d-flex align-items-center gap-1">
                   <i class="ti ti-external-link fs-5"></i>
-                  NuxtJs Preview
+                  Buy NextJs Version
+                </a>
+                <a target="_blank"
+                  href="https://www.wrappixel.com/templates/materialm-vuetify-nuxt-js-admin-template/?ref=376#package-card"
+                  class="dropdown-item d-flex align-items-center gap-1">
+                  <i class="ti ti-external-link fs-5"></i>
+                  Buy NuxtJs Version
                 </a>
               </div>
             </div>
@@ -1919,7 +1919,7 @@
           <div class="sidebar-footer-text position-relative z-1">
             <h4 class="fw-bolder fs-5 mb-0">Check Pro</h4>
             <h4 class="fw-bolder fs-5">Version</h4>
-            <a href="https://www.wrappixel.com/templates/flexy-bootstrap-admin-template/?ref=376" target="_blank"
+            <a href="https://www.wrappixel.com/templates/flexy-bootstrap-admin-template/?ref=376#demos" target="_blank"
               class="btn btn-secondary fs-2 fw-semibold">Check</a>
           </div>
           <img src="../assets/images/backgrounds/sidebar-buynow.png" alt=""
@@ -1960,7 +1960,7 @@
           </ul>
           <div class="navbar-collapse justify-content-end px-0" id="navbarNav">
             <ul class="navbar-nav flex-row ms-auto align-items-center justify-content-end">
-              <a href="https://www.wrappixel.com/templates/materialm-admin-dashboard-template/?ref=376" target="_blank"
+              <a href="https://www.wrappixel.com/templates/flexy-bootstrap-admin-template/?ref=376#demos" target="_blank"
                 class="btn btn-primary">Check Pro Template</a>
               <li class="nav-item dropdown">
                 <a class="nav-link " href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown"
