--- a/docs.html
+++ b/docs.html
@@ -4,7 +4,7 @@
 <head>
     <title>Flexy Bootstrap Free Template | Docs</title>
     <meta http-equiv="refresh" 
-          content="0; URL = 'https://wrappixel.github.io/free-documentation-wp/bootstrap/flexy/index.html'" />
+          content="0; URL =" />
 </head>
 
 <body>
