--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="app-topstrip bg-dark py-6 px-3 w-100 d-lg-flex align-items-center justify-content-between">
       <div class="d-flex align-items-center justify-content-center gap-5 mb-2 mb-lg-0">
         <a class="d-flex justify-content-center" href="#">
-          <img src="../assets/images/logos/logo-wrappixel.svg" alt="" width="150">
+          <img src="./assets/images/logos/logo-wrappixel.svg" alt="" width="150">
         </a>
 
         
@@ -46,7 +46,7 @@
       <div>
         <div class="brand-logo d-flex align-items-center justify-content-between">
           <a href="./index.html" class="text-nowrap logo-img">
-            <img src="../assets/images/logos/logo.svg" alt="" />
+            <img src="./assets/images/logos/logo.svg" alt="" />
           </a>
           <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
             <i class="ti ti-x fs-6"></i>
@@ -1843,7 +1843,7 @@
               <li class="nav-item dropdown">
                 <a class="nav-link " href="javascript:void(0)" id="drop2" data-bs-toggle="dropdown"
                   aria-expanded="false">
-                  <img src="../assets/images/profile/user-1.jpg" alt="" width="35" height="35" class="rounded-circle">
+                  <img src="./assets/images/profile/user-1.jpg" alt="" width="35" height="35" class="rounded-circle">
                 </a>
                 <div class="dropdown-menu dropdown-menu-end dropdown-menu-animate-up" aria-labelledby="drop2">
                   <div class="message-body">
@@ -2016,7 +2016,7 @@
                         <tr>
                           <td class="px-0">
                             <div class="d-flex align-items-center">
-                              <img src="../assets/images/profile/user-3.jpg" class="rounded-circle" width="40"
+                              <img src="./assets/images/profile/user-3.jpg" class="rounded-circle" width="40"
                                 alt="flexy" />
                               <div class="ms-3">
                                 <h6 class="mb-0 fw-bolder">Sunil Joshi</h6>
@@ -2035,7 +2035,7 @@
                         <tr>
                           <td class="px-0">
                             <div class="d-flex align-items-center">
-                              <img src="../assets/images/profile/user-5.jpg" class="rounded-circle" width="40"
+                              <img src="./assets/images/profile/user-5.jpg" class="rounded-circle" width="40"
                                 alt="flexy" />
                               <div class="ms-3">
                                 <h6 class="mb-0 fw-bolder">
@@ -2056,7 +2056,7 @@
                         <tr>
                           <td class="px-0">
                             <div class="d-flex align-items-center">
-                              <img src="../assets/images/profile/user-6.jpg" class="rounded-circle" width="40"
+                              <img src="./assets/images/profile/user-6.jpg" class="rounded-circle" width="40"
                                 alt="flexy" />
                               <div class="ms-3">
                                 <h6 class="mb-0 fw-bolder">
@@ -2077,7 +2077,7 @@
                         <tr>
                           <td class="px-0">
                             <div class="d-flex align-items-center">
-                              <img src="../assets/images/profile/user-7.jpg" class="rounded-circle" width="40"
+                              <img src="./assets/images/profile/user-7.jpg" class="rounded-circle" width="40"
                                 alt="flexy" />
                               <div class="ms-3">
                                 <h6 class="mb-0 fw-bolder">Nirav Joshi</h6>
@@ -2096,7 +2096,7 @@
                         <tr>
                           <td class="px-0">
                             <div class="d-flex align-items-center">
-                              <img src="../assets/images/profile/user-8.jpg" class="rounded-circle" width="40"
+                              <img src="./assets/images/profile/user-8.jpg" class="rounded-circle" width="40"
                                 alt="flexy" />
                               <div class="ms-3">
                                 <h6 class="mb-0 fw-bolder">Micheal Doe</h6>
@@ -2128,7 +2128,7 @@
                   <!-- Comment Row -->
                   <div class="d-flex flex-row comment-row border-bottom p-3 gap-3">
                     <div>
-                      <span><img src="../assets/images/profile/user-3.jpg" class="rounded-circle" alt="user"
+                      <span><img src="./assets/images/profile/user-3.jpg" class="rounded-circle" alt="user"
                           width="50" /></span>
                     </div>
                     <div class="comment-text w-100">
@@ -2166,7 +2166,7 @@
                   <!-- Comment Row -->
                   <div class="d-flex flex-row comment-row border-bottom active p-3 gap-3">
                     <div>
-                      <span><img src="../assets/images/profile/user-5.jpg" class="rounded-circle" alt="user"
+                      <span><img src="./assets/images/profile/user-5.jpg" class="rounded-circle" alt="user"
                           width="50" /></span>
                     </div>
                     <div class="comment-text active w-100">
@@ -2204,7 +2204,7 @@
                   <!-- Comment Row -->
                   <div class="d-flex flex-row comment-row border-bottom p-3 gap-3">
                     <div>
-                      <span><img src="../assets/images/profile/user-6.jpg" class="rounded-circle" alt="user"
+                      <span><img src="./assets/images/profile/user-6.jpg" class="rounded-circle" alt="user"
                           width="50" /></span>
                     </div>
                     <div class="comment-text w-100">
@@ -2242,7 +2242,7 @@
                   <!-- Comment Row -->
                   <div class="d-flex flex-row comment-row p-3 gap-3">
                     <div>
-                      <span><img src="../assets/images/profile/user-4.jpg" class="rounded-circle" alt="user"
+                      <span><img src="./assets/images/profile/user-4.jpg" class="rounded-circle" alt="user"
                           width="50" /></span>
                     </div>
                     <div class="comment-text w-100">
@@ -2355,13 +2355,13 @@
       </div>
     </div>
   </div>
-  <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
-  <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/js/sidebarmenu.js"></script>
-  <script src="../assets/js/app.min.js"></script>
-  <script src="../assets/libs/apexcharts/dist/apexcharts.min.js"></script>
-  <script src="../assets/libs/simplebar/dist/simplebar.js"></script>
-  <script src="../assets/js/dashboard.js"></script>
+  <script src="./assets/libs/jquery/dist/jquery.min.js"></script>
+  <script src="./assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./assets/js/sidebarmenu.js"></script>
+  <script src="./assets/js/app.min.js"></script>
+  <script src="./assets/libs/apexcharts/dist/apexcharts.min.js"></script>
+  <script src="./assets/libs/simplebar/dist/simplebar.js"></script>
+  <script src="./assets/js/dashboard.js"></script>
   <!-- solar icons -->
   <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
 </body>
